maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: value =- is not a member of Int
			sommeAngle=-1
                                  ^